objects/Log_Object__c.object
<CustomObject>
    <fields>
        <fullName>Is_Added__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Added</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <externalId>true</externalId>
        <label>Object Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <externalId>true</externalId>
        <label>Record Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Index__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Unique Index</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Log Object</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Log-{00000}</displayFormat>
        <label>Logger Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>